--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node ./src/index.js",
     "start:qrcode": "node ./src/index.js -q",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "keywords": [
     "2fa",
@@ -23,5 +24,8 @@
     "prompt": "^1.2.1",
     "protobufjs": "^6.11.3",
     "qrcode": "^1.5.0"
+  },
+  "devDependencies": {
+    "vitest": "^1.6.0"
   }
 }
